--- a/package.json
+++ b/package.json
@@ -31,12 +31,20 @@
     "terser-webpack-plugin": "^3.0.7",
     "testcafe": "^1.8.8",
     "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-require-from": "^1.8.1"
   },
   "browserslist": "> 1% or last 2 years",
   "name": "win-project-k8s-poc-mvp",
   "version": "1.0.0",
   "description": "eCommerece MVP POC Kubernetes Synergy",
   "author": "SpaceX",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@uppy/aws-s3": "^1.6.8",
+    "@uppy/core": "^1.12.1",
+    "@uppy/dashboard": "^1.12.1",
+    "@uppy/drag-drop": "^1.4.17",
+    "@uppy/golden-retriever": "^1.3.17"
+  }
 }
