--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@uppy/core": "^1.12.1",
     "@uppy/dashboard": "^1.12.1",
     "@uppy/drag-drop": "^1.4.17",
-    "@uppy/golden-retriever": "^1.3.17"
+    "@uppy/golden-retriever": "^1.3.17",
+    "@uppy/webcam": "^1.6.9"
   }
 }
