--- a/app/model_schemas/order_status.yml
+++ b/app/model_schemas/order_status.yml
@@ -3,7 +3,7 @@ name: order_status
 properties:
   - name: order_id
     type: string
-  - name: status
+  - name: name
     type: string
   - name: timestamp
     type: datetime
