--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cross-env NODE_ENV=production npx webpack-cli",
     "build:dev": "cross-env NODE_ENV=development npx webpack-cli",
     "test": "testcafe 'chromium:headless' test",
-    "clean": "rm -rf app/assets/{js,css}/*",
+    "clean": "npx rimraf app/assets/{js,css}/*",
     "postinstall": "npm run build",
     "deploy": "npm run build && CI=true pos-cli deploy",
     "predeploy": "npm run clean",
@@ -32,6 +32,7 @@
     "postcss-fixes": "^2.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^1.6.2",
     "terser-webpack-plugin": "^4.0.0",
     "testcafe": "^1.8.8",
