--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@uppy/dashboard": "^1.12.2",
     "@uppy/drag-drop": "^1.4.18",
     "@uppy/golden-retriever": "^1.3.18",
-    "@uppy/webcam": "^1.6.10"
+    "@uppy/webcam": "^1.6.10",
+    "glider-js": "^1.7.3"
   }
 }
