--- a/modules/stripe/public/model_schemas/checkout_session.yml
+++ b/modules/stripe/public/model_schemas/checkout_session.yml
@@ -1,9 +1,9 @@
 ---
 name: checkout_session
 properties:
-- name: gateway_id
-  type: string
 - name: external_id
+  type: string
+- name: status
   type: string
 - name: data
   type: text
