--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@uppy/drag-drop": "^1.4.18",
     "@uppy/golden-retriever": "^1.3.18",
     "@uppy/webcam": "^1.6.11",
+    "faker-cli": "^2.0.0",
     "glider-js": "^1.7.3"
   }
 }
