--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
     "@uppy/golden-retriever": "^1.3.18",
     "@uppy/webcam": "^1.6.11",
     "faker-cli": "^2.0.0",
-    "glider-js": "^1.7.3"
+    "ffmpeg": "0.0.4",
+    "glider-js": "^1.7.3",
+    "testcafe-browser-provider-lambdatest": "^2.0.2",
+    "testcafe-reporter-html": "^1.4.6",
+    "testcafe-reporter-spec-time": "^3.0.1"
   }
 }
