--- a/app/user.yml
+++ b/app/user.yml
@@ -2,45 +2,24 @@ properties:
   - name: followed_user_ids
     type: array
   - name: username
-  - name: photo
+  - name: first_name
+  - name: last_name
+  - name: avatar
     type: upload
-    image_versions:
-      uncropped:
-        output:
-          format: jpeg
-          quality: 80
-        resize:
-          width: 1920
-      small:
-        output:
-          format: jpeg
-          quality: 80
-        resize:
-          width: 640
-          height: 480
-          fit: cover
-      medium:
-        output:
-          format: jpeg
-          quality: 80
-        resize:
-          width: 1280
-          height: 960
-          fit: cover
-      big:
-        output:
-          format: jpeg
-          quality: 80
-        resize:
-          width: 1920
-          height: 1440
-          fit: cover
-      thumb:
-        output:
-          format: jpeg
-          quality: 80
-        resize:
-          width: 320
-          height: 240
-          fit: cover
-          without_enlargement: false
+    options:
+      versions:
+        - name: uncropped
+          output:
+            format: jpeg
+            quality: 80
+          resize:
+            fit: inside
+        - name: small
+          output:
+            format: jpeg
+            quality: 80
+          resize:
+            width: 406
+            height: 256
+            fit: inside
+            without_enlargement: true
