add slug to users

--- a/app/user.yml
+++ b/app/user.yml
@@ -4,6 +4,7 @@ properties:
   - name: username
   - name: first_name
   - name: last_name
+  - name: slug
   - name: avatar
     type: upload
     options:
