--- a/app/model_schemas/comment.yml
+++ b/app/model_schemas/comment.yml
@@ -3,6 +3,7 @@ name: comment
 properties:
   - name: uuid
   - name: commentable_uuid
+  - name: commentable_type
   - name: creator_id
   - name: title
   - name: body
