--- a/app/model_schemas/profile.yml
+++ b/app/model_schemas/profile.yml
@@ -1,8 +1,9 @@
 ---
 name: profile
 properties:
-  - name: name
-  - name: slug
   - name: uuid
+  - name: name
+  - name: user_id
+  - name: slug
   - name: first_name
   - name: last_name
