Orders: line items
Fix calculating price and total price for line item

Orders: update line item quantity

Add rest api for line_items

Add readme

Remove items from order

Order: update item quantity

Order: recalculate

Order: clean existing order before test

Order: fix adding item and recalculatin the price

Order: fix stripe payments

Order: after adding product to cart we show order

--- a/app/model_schemas/order.yml
+++ b/app/model_schemas/order.yml
@@ -1,12 +1,15 @@
 name: order
 properties:
-  - name: item_id
-    type: string
   - name: buyer
     type: string
   - name: seller
     type: string
-  - name: total
+  - name: total_shipping_cost_cents
     type: integer
-  - name: status
+  - name: products_price_cents
+    type: integer
+  - name: total_price_cents
+    type: integer
+
+  - name: c__status
     type: string
