Github actions: fixes for master branch workflow; check js errors in tests

--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -76,4 +76,4 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run testcafe
         run: |
-          testcafe "chromium:headless" test --skip-js-errors
+          testcafe "chromium:headless" test
