--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -4,11 +4,26 @@ name: Deploy master
 # events but only for the master branch
 on:
   push:
-    branches: [ github-actions-master ]
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  pre_job:
+    # continue-on-error: true # Uncomment once integration is finished
+    runs-on: ubuntu-latest
+    # Map a step output to a job output
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          github_token: ${{ github.token }}
+          paths_ignore: '["**/README.md"]'
+
   build:
+    needs: pre_job
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -57,7 +72,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run testcafe
         run: |
-          testcafe "chromium:headless" test --skip-js-errors
+          testcafe "chromium:headless" test
 
   deploy_live:
     needs: test_qa
