--- a/.github/workflows/push_master.yml
+++ b/.github/workflows/push_master.yml
@@ -21,10 +21,10 @@ jobs:
           github_token: ${{ github.token }}
           paths_ignore: '["**/README.md"]'
 
-  deploy_qa:
+  main:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: ubuntu-latest
+    container: platformos/testcafe:3.0.1
     env:
       MPKIT_URL: ${{ secrets.MPKIT_URL_QA }}
       MPKIT_EMAIL: ${{ secrets.MPKIT_EMAIL }}
@@ -33,52 +33,41 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
       - name: Build
+        shell: sh
         run: |
           npm ci
           npm run build
-      - name: Deploy
+
+      - name: Deploy QA
+        shell: sh
         run: |
+          echo working on ${MPKIT_URL/https:\/\//} - ID: ${TEST_ID}
+          set -e
           npm -g install @platformos/pos-cli
+
           pos-cli data clean --auto-confirm --include-schema
           pos-cli deploy
           pos-cli data import --path=./seed/data.zip --zip
 
-  test_qa:
-    needs: deploy_qa
-    runs-on: ubuntu-latest
-    container: platformos/testcafe:latest
-    env:
-      MPKIT_URL: ${{ secrets.MPKIT_URL_QA }}
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v1
-      - name: Run testcafe
+      - name: Run testcafe on QA
+        shell: sh
+        env:
+          MPKIT_URL: ${{ secrets.MPKIT_URL_QA }}
         run: |
-          testcafe "chromium:headless" test
+          set -e
+          npm run test
 
-  deploy_live:
-    needs: test_qa
-    runs-on: ubuntu-latest
-    env:
-      MPKIT_URL: ${{ secrets.MPKIT_URL_LIVE }}
-      MPKIT_EMAIL: ${{ secrets.MPKIT_EMAIL }}
-      MPKIT_TOKEN: ${{ secrets.MPKIT_TOKEN }}
-      CI: true
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-      - name: Build
+      - name: Publish test reports
+        if: always()
+        shell: sh
         run: |
-          npm ci
-          npm run build
-      - name: Deploy
+          echo "test published to ${MPKIT_URL/https:\/\//}/_test_results"
+          npm run ci:test:publish
+
+      - name: Deploy LIVE
+        env:
+          MPKIT_URL: ${{ secrets.MPKIT_URL_LIVE }}
+        shell: sh
         run: |
-          npm -g install @platformos/pos-cli
           pos-cli deploy
