upload test report to qa0

--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           npm run test
       - name: Publish test reports
-        if: ${{ always() }}
+        if: ${{ failure() }}
         shell: sh
         run: |
           set -e
