--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           github_token: ${{ github.token }}
           paths_ignore: '["**/README.md"]'
+          concurrent_skipping: 'always'
 
   main:
     needs: pre_job
