Question: show number of answers

--- a/app/model_schemas/post.yml
+++ b/app/model_schemas/post.yml
@@ -19,5 +19,7 @@ properties:
     type: string
   - name: c__score
     type: integer
+  - name: c__answers
+    type: integer
   - name: slug
     type: string
