--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@uppy/drag-drop": "^1.4.19",
     "@uppy/golden-retriever": "^1.3.19",
     "@uppy/webcam": "^1.7.0",
+    "@yaireo/tagify": "^3.21.5",
     "easymde": "^2.12.1",
     "faker-cli": "^2.0.0",
     "ffmpeg": "0.0.4",
