--- a/app/model_schemas/item.yml
+++ b/app/model_schemas/item.yml
@@ -15,6 +15,8 @@ properties:
     type: string
   - name: cover_photo_url
     type: string
+  - name: slug
+    type: string
 
   - name: c__status
     type: string
